Changed background color

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5748,7 +5748,7 @@ button.list-group-item-danger.active:focus {
   border-top-color: #bce8f1;
 }
 .panel-info > .panel-heading .badge {
-  color: #d9edf7;
+  color: #ffffff;
   background-color: #31708f;
 }
 .panel-info > .panel-footer + .panel-collapse > .panel-body {
